CHANGED HEADER, BUTTON COLOR

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1 class="logo">UX Design</h1>
+				<h1 class="logo">Jane Richardson</h1>
 				<nav>
 					<ul>
 						<div class="nav-2">
@@ -32,20 +32,20 @@
 		</header>
 		<section id="hero">
 			<div class="container">
-				<h2>Get piece of mind with a single tap</h2>
-				<a class="button yellow" href="#">Get it Now</a>
+				<h2>Past Work</h2>
+				<a class="button blue" href="#">ENTER</a>
 			</div>
 		</section>
 		<section id="benefits">
 			<div class="container">
 				<h3>Benefits</h3>
 				<p>UXDI is hard work, but comes with great rewards. Moving into the field of design requires dedication and motivation.</p>
-				<ul>
+				<Ul>
 					<li>Schedule meetings for you</li>
 					<li>Excel automation to complete your work for you</li>
 					<li>Responds to emails on your behalf</li>
 					<li>Does all your work for you with our revolutionary AI technology</li>
-				</ul>
+				</UL>
 			</div>
 		</section>
 		<section id="testimonial">
